# quiz_service

./: .env.example  .gitignore  DEPLOY_GUIDE.md  Dockerfile  Dockerfile.worker  Makefile  PERFORMANCE_OPTIMIZATIONS.md  PIPELINE_EXPLANATION.md  Procfile  README.md  docker-compose.yml  document_parse.py  pyproject.toml  requirements.prod.txt  requirements.railway.txt  requirements.txt  start.bat  start.py  start.sh
.github/workflows/: ci.yml
app/: main.py
app/api/: __init__.py  admin_routes.py  quiz_routes.py
app/chunkers/: __init__.py  base_chunker.py  chunker_factory.py  markdown_chunker.py
app/core/: config.py  logging.py
app/database/: __init__.py  faiss_index.py  neo4j_db.py
app/graph/: __init__.py  chunk_assignment.py  graph_builder.py  graph_schema.py  models.py  section_hierarchy_builder.py
app/llm/: __init__.py  base_adapter.py  gemini_adapter.py  mock_adapter.py  openai_adapter.py  openrouter_adapter.py
app/models/: __init__.py  quiz.py
app/parsers/: __init__.py  base_parser.py  llama_parser.py  parser_factory.py  text_parser.py
app/search/: __init__.py  hybrid_search.py
app/services/: __init__.py  chunk_selector.py  quiz_service.py  relevance_detector.py
app/utils/: __init__.py  document_processor.py  embedding_cache.py  file_utils.py
app/worker/: celery_app.py  tasks.py
public/: admin.html  admin.js  index.html
scripts/: benchmark_embeddings.py  migrate_cypher.py  test_components.py
tests/: README.md
tests/unit/: test_api.py  test_faiss_filtering.py  test_hybrid_pipeline.py  test_quiz_modes.py  test_search_accuracy.py
(+2 files in other folders)
